# ytmusic-lite

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/injected/: config.js  inject.js
src-tauri/src/: lib.rs  main.rs
